[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/frames/ui_panel.tres" type="StyleBox" id=1]
[ext_resource path="res://ui/ChartBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/fonts/ui_font_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui/RankItem.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/TourStats.gd" type="Script" id=5]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 0, 1, 0, 1 )
thickness = 4

[sub_resource type="StyleBoxLine" id=2]
color = Color( 0, 1, 0, 1 )
thickness = 4
vertical = true

[node name="TourStats" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -580.0
margin_top = -205.0
margin_right = 580.0
margin_bottom = 205.0
grow_horizontal = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="PanelContainer" parent="."]
margin_right = 1160.0
margin_bottom = 55.0
custom_styles/panel = ExtResource( 1 )

[node name="Title" type="Label" parent="Header"]
modulate = Color( 0, 1, 0, 1 )
margin_left = 18.0
margin_top = 18.0
margin_right = 1142.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 3 )
text = "Tournament Stat Summary"
align = 1

[node name="Body" type="HBoxContainer" parent="."]
margin_top = 59.0
margin_right = 1160.0
margin_bottom = 410.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Teams" type="PanelContainer" parent="Body"]
margin_right = 548.0
margin_bottom = 351.0
custom_styles/panel = ExtResource( 1 )

[node name="Body" type="VBoxContainer" parent="Body/Teams"]
margin_left = 18.0
margin_top = 18.0
margin_right = 530.0
margin_bottom = 333.0

[node name="Title" type="Label" parent="Body/Teams/Body"]
modulate = Color( 0, 1, 0, 1 )
margin_right = 512.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Team Stats"
align = 1

[node name="HSeparator" type="HSeparator" parent="Body/Teams/Body"]
margin_top = 23.0
margin_right = 512.0
margin_bottom = 27.0
custom_styles/separator = SubResource( 1 )

[node name="ChartBar" parent="Body/Teams/Body" instance=ExtResource( 2 )]
margin_top = 31.0
margin_bottom = 63.0

[node name="ChartBar2" parent="Body/Teams/Body" instance=ExtResource( 2 )]
margin_top = 67.0
margin_bottom = 99.0

[node name="ChartBar3" parent="Body/Teams/Body" instance=ExtResource( 2 )]
margin_top = 103.0
margin_bottom = 135.0

[node name="ChartBar4" parent="Body/Teams/Body" instance=ExtResource( 2 )]
margin_top = 139.0
margin_bottom = 171.0

[node name="ChartBar5" parent="Body/Teams/Body" instance=ExtResource( 2 )]
margin_top = 175.0
margin_bottom = 207.0

[node name="ChartBar6" parent="Body/Teams/Body" instance=ExtResource( 2 )]
margin_top = 211.0
margin_bottom = 243.0

[node name="ChartBar7" parent="Body/Teams/Body" instance=ExtResource( 2 )]
margin_top = 247.0
margin_bottom = 279.0

[node name="ChartBar8" parent="Body/Teams/Body" instance=ExtResource( 2 )]
margin_top = 283.0
margin_bottom = 315.0

[node name="Leaderboard" type="PanelContainer" parent="Body"]
margin_left = 552.0
margin_right = 774.0
margin_bottom = 351.0
custom_styles/panel = ExtResource( 1 )

[node name="Body" type="VBoxContainer" parent="Body/Leaderboard"]
margin_left = 18.0
margin_top = 18.0
margin_right = 204.0
margin_bottom = 333.0

[node name="Title" type="Label" parent="Body/Leaderboard/Body"]
modulate = Color( 0, 1, 0, 1 )
margin_right = 186.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Top 10 Ranking"
align = 1

[node name="HSeparator" type="HSeparator" parent="Body/Leaderboard/Body"]
margin_top = 23.0
margin_right = 186.0
margin_bottom = 27.0
custom_styles/separator = SubResource( 1 )

[node name="RankItem" parent="Body/Leaderboard/Body" instance=ExtResource( 4 )]
margin_top = 31.0
margin_right = 186.0
margin_bottom = 50.0

[node name="RankItem2" parent="Body/Leaderboard/Body" instance=ExtResource( 4 )]
margin_top = 54.0
margin_right = 186.0
margin_bottom = 73.0

[node name="RankItem3" parent="Body/Leaderboard/Body" instance=ExtResource( 4 )]
margin_top = 77.0
margin_right = 186.0
margin_bottom = 96.0

[node name="RankItem4" parent="Body/Leaderboard/Body" instance=ExtResource( 4 )]
margin_top = 100.0
margin_right = 186.0
margin_bottom = 119.0

[node name="RankItem5" parent="Body/Leaderboard/Body" instance=ExtResource( 4 )]
margin_top = 123.0
margin_right = 186.0
margin_bottom = 142.0

[node name="RankItem6" parent="Body/Leaderboard/Body" instance=ExtResource( 4 )]
margin_top = 146.0
margin_right = 186.0
margin_bottom = 165.0

[node name="RankItem7" parent="Body/Leaderboard/Body" instance=ExtResource( 4 )]
margin_top = 169.0
margin_right = 186.0
margin_bottom = 188.0

[node name="RankItem8" parent="Body/Leaderboard/Body" instance=ExtResource( 4 )]
margin_top = 192.0
margin_right = 186.0
margin_bottom = 211.0

[node name="RankItem9" parent="Body/Leaderboard/Body" instance=ExtResource( 4 )]
margin_top = 215.0
margin_right = 186.0
margin_bottom = 234.0

[node name="RankItem10" parent="Body/Leaderboard/Body" instance=ExtResource( 4 )]
margin_top = 238.0
margin_right = 186.0
margin_bottom = 257.0

[node name="BetStats" type="PanelContainer" parent="Body"]
margin_left = 778.0
margin_right = 1160.0
margin_bottom = 351.0
custom_styles/panel = ExtResource( 1 )

[node name="Body" type="HBoxContainer" parent="Body/BetStats"]
margin_left = 18.0
margin_top = 18.0
margin_right = 364.0
margin_bottom = 333.0

[node name="Gains" type="VBoxContainer" parent="Body/BetStats/Body"]
margin_right = 160.0
margin_bottom = 315.0

[node name="Title" type="Label" parent="Body/BetStats/Body/Gains"]
modulate = Color( 0, 1, 0, 1 )
margin_right = 160.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Top 10 Gains"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Body/BetStats/Body/Gains"]
margin_top = 23.0
margin_right = 160.0
margin_bottom = 27.0
custom_styles/separator = SubResource( 1 )

[node name="RankItem" parent="Body/BetStats/Body/Gains" instance=ExtResource( 4 )]
margin_top = 31.0
margin_right = 160.0
margin_bottom = 50.0

[node name="RankItem2" parent="Body/BetStats/Body/Gains" instance=ExtResource( 4 )]
margin_top = 54.0
margin_right = 160.0
margin_bottom = 73.0

[node name="RankItem3" parent="Body/BetStats/Body/Gains" instance=ExtResource( 4 )]
margin_top = 77.0
margin_right = 160.0
margin_bottom = 96.0

[node name="RankItem4" parent="Body/BetStats/Body/Gains" instance=ExtResource( 4 )]
margin_top = 100.0
margin_right = 160.0
margin_bottom = 119.0

[node name="RankItem5" parent="Body/BetStats/Body/Gains" instance=ExtResource( 4 )]
margin_top = 123.0
margin_right = 160.0
margin_bottom = 142.0

[node name="RankItem6" parent="Body/BetStats/Body/Gains" instance=ExtResource( 4 )]
margin_top = 146.0
margin_right = 160.0
margin_bottom = 165.0

[node name="RankItem7" parent="Body/BetStats/Body/Gains" instance=ExtResource( 4 )]
margin_top = 169.0
margin_right = 160.0
margin_bottom = 188.0

[node name="RankItem8" parent="Body/BetStats/Body/Gains" instance=ExtResource( 4 )]
margin_top = 192.0
margin_right = 160.0
margin_bottom = 211.0

[node name="RankItem9" parent="Body/BetStats/Body/Gains" instance=ExtResource( 4 )]
margin_top = 215.0
margin_right = 160.0
margin_bottom = 234.0

[node name="RankItem10" parent="Body/BetStats/Body/Gains" instance=ExtResource( 4 )]
margin_top = 238.0
margin_right = 160.0
margin_bottom = 257.0

[node name="VSeparator" type="VSeparator" parent="Body/BetStats/Body"]
margin_left = 164.0
margin_right = 168.0
margin_bottom = 315.0
custom_styles/separator = SubResource( 2 )

[node name="Losses" type="VBoxContainer" parent="Body/BetStats/Body"]
margin_left = 172.0
margin_right = 346.0
margin_bottom = 315.0

[node name="Title" type="Label" parent="Body/BetStats/Body/Losses"]
modulate = Color( 0, 1, 0, 1 )
margin_right = 174.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Top 10 Losses"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Body/BetStats/Body/Losses"]
margin_top = 23.0
margin_right = 174.0
margin_bottom = 27.0
custom_styles/separator = SubResource( 1 )

[node name="RankItem" parent="Body/BetStats/Body/Losses" instance=ExtResource( 4 )]
margin_top = 31.0
margin_right = 174.0
margin_bottom = 50.0

[node name="RankItem2" parent="Body/BetStats/Body/Losses" instance=ExtResource( 4 )]
margin_top = 54.0
margin_right = 174.0
margin_bottom = 73.0

[node name="RankItem3" parent="Body/BetStats/Body/Losses" instance=ExtResource( 4 )]
margin_top = 77.0
margin_right = 174.0
margin_bottom = 96.0

[node name="RankItem4" parent="Body/BetStats/Body/Losses" instance=ExtResource( 4 )]
margin_top = 100.0
margin_right = 174.0
margin_bottom = 119.0

[node name="RankItem5" parent="Body/BetStats/Body/Losses" instance=ExtResource( 4 )]
margin_top = 123.0
margin_right = 174.0
margin_bottom = 142.0

[node name="RankItem6" parent="Body/BetStats/Body/Losses" instance=ExtResource( 4 )]
margin_top = 146.0
margin_right = 174.0
margin_bottom = 165.0

[node name="RankItem7" parent="Body/BetStats/Body/Losses" instance=ExtResource( 4 )]
margin_top = 169.0
margin_right = 174.0
margin_bottom = 188.0

[node name="RankItem8" parent="Body/BetStats/Body/Losses" instance=ExtResource( 4 )]
margin_top = 192.0
margin_right = 174.0
margin_bottom = 211.0

[node name="RankItem9" parent="Body/BetStats/Body/Losses" instance=ExtResource( 4 )]
margin_top = 215.0
margin_right = 174.0
margin_bottom = 234.0

[node name="RankItem10" parent="Body/BetStats/Body/Losses" instance=ExtResource( 4 )]
margin_top = 238.0
margin_right = 174.0
margin_bottom = 257.0

[node name="Tween" type="Tween" parent="."]
